<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3186408820394073/8330622349</string>
    <string name="app_name">Numeric Suspense</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="info">Total: %s</string>
    <string name="time">Time: %s</string>
    <string name="OutofTime">You Ran Out Of Time</string>
    <string name="WrongTile">You Tapped the Wrong Number</string>
    <string name="Your_Score">Your Score</string>
    <string name="High_Score">High Score: </string>
    <string name="Menu">Menu</string>
    <string name="Again">Again</string>
    <string name="SumToTen">SumTo10</string>
    <string name="Backwards">Backwards</string>
    <string name="arithmetic_help">Click each number tile in ascending order by counting up by 1. But beware because the numbers on the number tiles may change position.</string>
    <string name="sum_to_ten_help">"Click two number tiles that add up to 10. "</string>
    <string name="backward_help">Click each number tile in descending order by counting down by 1. But beware because the numbers on the number tiles may change position.</string>
    <string name="sixtysec_help">You have 60 seconds to click each number tile in ascending order by counting up by 1. But beware because the numbers on the number tiles may change position .</string>
    <string name="is_zero">Completed Game</string>
    <string name="click_up_here">(Click The Colored Text To Play)</string>
    <string name="SixtySec">60Seconds</string>
    <string name="TimesUp">Times Up</string>
    <string name="UserEndGame">You Ended The Game</string>
</resources>
