<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rectangle">

            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/time"
                android:textSize="20sp"
                android:paddingTop="3dp"
                android:paddingLeft="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/info"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/left_top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="70sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/right_top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="70sp"
                    android:background="@android:color/white"
                    android:textColor="@android:color/darker_gray"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/left_bottom"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="70sp"
                    android:background="@android:color/white"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/right_bottom"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="70sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@android:color/darker_gray" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>